# ADBNet

./: CHANGELOG.md  Main.hs  adbnet.cabal  adbnet.org  hie.yaml  neural_network.py  pyproject.toml
src/: ADBNet.hs
src/ADBNet/: Array.hs  Maths.hs  Misc.hs  Network.hs  Tensor.hs
test/ADBNet/: ArraySpec.hs  NetworkSpec.hs  TensorSpec.hs
