[tool.poetry]
name = "adbnet"
version = "0.1.0"
description = "Neural Networks"
authors = ["Alexander Davidson Bryan <alxdb@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.21.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
